[package]
name = "guest_reconciler"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.36.0", features = ["bitflags"] }
anyhow = "1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "example:reconciler"

[package.metadata.component.dependencies]

[package.metadata.component.target]
path = "../../../wit/reconciler.wit"
world = "reconciler"

[package.metadata.component.target.dependencies]
"wasi:cli" = { path = "../../../wit/deps/wasi-cli-0.2.0" }
"wasi:io" = { path = "../../../wit/deps/wasi-io-0.2.0" }
"wasi:random" = { path = "../../../wit/deps/wasi-random-0.2.0" }
"wasi:filesystem" = { path = "../../../wit/deps/wasi-filesystem-0.2.0" }
"wasi:clocks" = { path = "../../../wit/deps/wasi-clocks-0.2.0" }