[package]
name = "reconciler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
tokio = {version = "1.42.0", features=["full"]}
wasi = "0.13.3"
wasmtime = "27.0.0"
wasmtime-wasi = "27.0.0"
wasmtime-wasi-http = "28.0.0"
#guest_reconciler = { path = "../../../guest/rust/reconciler" }

#[package.metadata.component.target]
#path = "../../../wit/reconciler.wit"
#world = "reconciler"

#[package.metadata.component.target.dependencies]
#"wasi:cli" = { path = "../../../wit/deps/wasi-cli-0.2.0" }
#"wasi:io" = { path = "../../../wit/deps/wasi-io-0.2.0" }
#"wasi:random" = { path = "../../../wit/deps/wasi-random-0.2.0" }
#"wasi:filesystem" = { path = "../../../wit/deps/wasi-filesystem-0.2.0" }
#"wasi:clocks" = { path = "../../../wit/deps/wasi-clocks-0.2.0" }